# QOwnTodolist

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.8BD50CC17542A3E5.idx  mainwindow.cpp.91ADE703806700F8.idx  mainwindow.h.8C9867D175DE0A86.idx
cmake/: ElaWidgetTools.cmake  QCefView.cmake  QxOrm.cmake  commonsettings.cmake
plugins/: CMakeLists.txt
plugins/eduscheduleimporter/: CMakeLists.txt
plugins/eduscheduleimporter/src/: main.cpp  website.h  zhengfangparser.cpp
plugins/livereminder/: CMakeLists.txt  api.h  generate_sources.py
plugins/livereminder/src/: api.h  main.cpp
plugins/livereminder/src/core/: api.h  livestatusfetcher.cpp  livestatusfetcher.h  streamdata.h  streamfetcher.cpp  streamfetcher.h  streaminfo.h  usersignininfo.cpp  usersignininfo.h
plugins/livereminder/src/gui/: mainwindow.cpp  mainwindow.h  previewitem.cpp  previewitem.h  previewwindow.cpp  previewwindow.h  previewwindowmodel.cpp  previewwindowmodel.h  signinwidget.cpp  signinwidget.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/core/: databaseservice.cpp
src/core/database/: course.cpp  course.h  export.h  precompiled.h  save.cpp  save.h
src/core/database/model/: course.cpp  course.h
src/core/schedule/: scheduleparser.cpp  scheduleparser.h
src/gui/: mainwindow.cpp  mainwindow.h
src/gui/component/: verticalsidebar.cpp  verticalsidebar.h
src/gui/widgets/: calendarwidget.cpp  calendarwidget.h  calendarwindow.cpp  calendarwindow.h  functionwindow.cpp  functionwindow.h  mainwindow.cpp  mainwindow.h  schedulewidget.cpp  schedulewidget.h  taskwidget.cpp  taskwidget.h
src/gui/widgets/FunctionWidget/: functionwidget.cpp  functionwidget.h  schedulemodel.cpp  schedulemodel.h  schedulewidget.cpp  schedulewidget.h
src/gui/widgets/button/: addtaskbutton.cpp  addtaskbutton.h
src/utils/: misc.h
